--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@
     src: url(fonts/Roboto-Medium.ttf);
     font-weight: 500;
 }
+@font-face {
+    font-family: roboto;
+    src: url(fonts/Roboto-Bold.ttf);
+    font-weight: 700;
+}
 
 .layout {
     width: 100%;
@@ -23,7 +28,7 @@
 
 .sidebar {
     grid-row: 1 / 3;
-    background-color: #0e8ac8;
+    background-color: #1a8fca;
     display: flex;
     flex-direction: column;
     gap: 3.5rem;
@@ -62,7 +67,9 @@
     display: grid;
     grid-template: 1fr 1.5fr / 1.8fr 1fr;
     gap: 2.097vw;
-    padding: 1.04vw 4.14vw 1.04vw 3vw;
+    padding: 0.75vw 4.14vw 1.04vw 3vw;
+    box-shadow: 0px 3px 5px 0px rgb(211, 211, 211);
+    z-index: 2;
 }
 .search-box, .header-exstra, .header-profile, .header-buttons {
     display: flex;
@@ -80,7 +87,7 @@
 }
 input[type="search"] {
     border: none;
-    background-color: #dfe7eb;
+    background-color: #e3e6ed;
     flex-grow: 1;
     height: 1.9rem;
     border-radius: 1vw;
@@ -88,5 +95,66 @@ input[type="search"] {
 .profile-img {
     height: 2.9rem;
     border-radius: 50%;
+}
+.profile-img-big {
+    border-radius: 50%;
+    height: 4.35rem;
+}
+.greeting-box {
+    display: flex;
+    height: 95%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    font-weight: 700;
+}
+.greeting-1 {
+    font-size: 0.85rem;
+}
+.greeting-2 {
+    font-size: 1.5rem;
+}
+.header-buttons {
+    justify-content: space-between;
+}
+.header-buttons>button {
+    border: none;
+    background-color: #1a8fca;
+    color: white;
+    height: 2.5rem;
+    width: 6.25rem;
+    border-radius: 2rem;
+    font-size: 0.95rem;
+    font-weight: 700;
+    cursor: pointer;
+}
+.main-content {
+    background-color: #e3e6ed;
+    z-index: 1;
+}
+.main-grid {
+    display: grid;
+    grid-template-columns: 2.845fr 1fr;
+    width: 95.8%;
+    padding: 2.5vw 0 2.5vw 1.75vw;
+    column-gap: 25px;
+}
+.project-box {
+    display: grid;
+    grid-template-rows: 1vw 1fr;
+}
+.project-box {
+    display: grid;
+    grid-template-rows: auto 1fr;
+}
+.card-box {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 380px));
+    grid-template-rows: repeat(3, 220px);
+    gap: 25px;
+}
+.card {
+    width: 100%;
+    height: 100%;
+    background-color: white;
 }
 
