--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@
     src: url(fonts/Roboto-Bold.ttf);
     font-weight: 700;
 }
+@font-face {
+    font-family: roboto;
+    src: url(fonts/Roboto-Light.ttf);
+    font-weight: 300;
+}
 
 .layout {
     width: 100%;
@@ -135,16 +140,16 @@ input[type="search"] {
     display: grid;
     grid-template-columns: 2.845fr 1fr;
     width: 95.8%;
-    padding: 2.5vw 0 2.5vw 1.75vw;
+    padding: 2.5vw 0 2.5vw 1.5vw;
     column-gap: 25px;
 }
-.project-box {
-    display: grid;
-    grid-template-rows: 1vw 1fr;
-}
-.project-box {
+.project-box, .announcement-trending-box {
     display: grid;
     grid-template-rows: auto 1fr;
+    gap: 0.8vw;
+}
+.project-header, .announcement-header, .trending-header {
+    font-size: 1.27rem;
 }
 .card-box {
     display: grid;
@@ -156,5 +161,85 @@ input[type="search"] {
     width: 100%;
     height: 100%;
     background-color: white;
+    border-radius: 2.25% / 3.89%;
+    overflow: hidden;
+    display: flex;
+    box-shadow: 1.25px 1.25px 3.5px 0px rgba(87,87,87,0.2);
+}
+.card-color {
+    height: 100%;
+    width: 2%;
+    background-color: rgb(241, 177, 59);
+}
+.card-text-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 7% 5%;
+    width: 98%;
+    height: 100%;
+    box-sizing: border-box;
+}
+.card-text-box {
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+}
+.card-header {
+    font-size: 1.1rem;
+}
+.card-text, .announcement-text {
+    font-weight: 300;
+    color: rgb(97, 97, 97);
+}
+.card-buttons {
+    display: flex;
+    justify-content: end;
+    gap: 10%;
+}
+.card-buttons>img {
+    height: 1.5rem;
+}
+.announcement-box, .trending-box {
+    width: 275px;
+    height: 325px;
+    background-color: white;
+    border-radius: 2.95% / 2.5%;
+    box-shadow: 1.25px 1.25px 3.5px 0px rgba(87,87,87,0.2);
+    padding: 11% 11% 9%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.announcement-box {
+    margin-bottom: 30px;
+}
+.trending-header {
+    margin-bottom: 5px;
+}
+.announcement-text-box {
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+}
+.announcement-box-header {
+    font-size: 1rem;
+}
+.announcement-text {
+    font-size: 0.75rem;
+}
+.trending-profile {
+    display: flex;
+    font-size: 0.9rem;
+    font-weight: 300;
+    gap: 1rem;
+}
+.profile-text {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0.1rem;
 }
 
